Mojang-ification part 2