@@ -3,9 +3,9 @@ package fzzyhmstrs.emi_loot.parser.condition;
 import fzzyhmstrs.emi_loot.mixins.AlternativeLootConditionAccessor;
 import fzzyhmstrs.emi_loot.parser.LootTableParser;
 import fzzyhmstrs.emi_loot.util.TextKey;
-import net.minecraft.item.ItemStack;
-import net.minecraft.loot.condition.LootCondition;
-import net.minecraft.text.Text;
+import net.minecraft.network.chat.Component;
+import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.level.storage.loot.predicates.LootItemCondition;
 
 import java.util.Arrays;
 import java.util.Collections;
@@ -16,21 +16,21 @@ public class AlternativesConditionParser implements ConditionParser{
 
     @Override
     public List<LootTableParser.LootConditionResult> parseCondition(LootCondition condition, ItemStack stack, boolean parentIsAlternative){
-        List<LootCondition> terms = ((AlternativeLootConditionAccessor)condition).getConditions();
+        List<LootItemCondition> terms = ((AlternativeLootConditionAccessor)condition).getConditions();
         int size = terms.size();
         if (size == 1){
-            List<LootTableParser.LootConditionResult> termResults = LootTableParser.parseLootCondition(terms.get(0), stack);
-            Text termText = LootTableParser.compileConditionTexts(stack,termResults);
+            List<LootTableParser.LootConditionResult> termResults = LootTableParser.parseLootCondition(terms.getFirst(), stack);
+            Component termText = LootTableParser.compileConditionTexts(stack,termResults);
             return Collections.singletonList(new LootTableParser.LootConditionResult(TextKey.of("emi_loot.condition.alternates",termText.getString())));
         } else if (size == 2){
-            List<LootTableParser.LootConditionResult> termResults1 = LootTableParser.parseLootCondition(terms.get(0), stack);
-            List<LootTableParser.LootConditionResult> termResults2 = LootTableParser.parseLootCondition(terms.get(1), stack);
-            Text termText1 = LootTableParser.compileConditionTexts(stack,termResults1);
-            Text termText2;
+            List<LootTableParser.LootConditionResult> termResults1 = LootTableParser.parseLootCondition(terms.getFirst(), stack);
+            List<LootTableParser.LootConditionResult> termResults2 = LootTableParser.parseLootCondition(terms.getLast(), stack);
+            Component termText1 = LootTableParser.compileConditionTexts(stack,termResults1);
+            Component termText2;
             if (termResults2.size() == 1){
-                TextKey key = termResults2.get(0).getText();
+                TextKey key = termResults2.getFirst().getText();
                 if (key.args().size() == 1){
-                    termText2 = Text.of(key.args().get(0));
+                    termText2 = Component.nullToEmpty(key.args().getFirst());
                 } else {
                     termText2 = LootTableParser.compileConditionTexts(stack,termResults2);
                 }
